CubeProgrammer_API.h

/**
 * \enum  debugPort
 * \brief Select the debug port interface for connection.
 */
typedef enum debugPort
{
    JTAG = 0,               /**< JTAG debug port. */
    SWD = 1,                /**< SWD debug port. */
}debugPort;
/**
 * \struct  FileData_C
 * \brief   Get file required informations.
 */
typedef struct fileData_C
{
    int Type;                       /**< File extension type. */
    int segmentsNbr;                /**< Number of required segments. */
    segmentData_C* segments;        /**< Segments description. */
}fileData_C ;
/* -------------------------------------------------------------------------------------------- */
/*                              Loaders Data Structures                                         */
/* -------------------------------------------------------------------------------------------- */


/**
 * \struct  deviceSector
 * \brief   Get device sectors basic informations.
 */
typedef struct deviceSector
{
  uint32_t		sectorNum;                  /**< Number of Sectors. */
  uint32_t		sectorSize;                 /**< Sector Size in BYTEs. */
}deviceSector;
/**
 * \struct  externalLoader
 * \brief   Get external Loader parameters to launch the process of programming an external flash memory.
 */
typedef struct externalLoader{
    char             filePath[200];         /**< FlashLoader file path. */
    char             deviceName[100];		/**< Device Name and Description. */
    int              deviceType;		    /**< Device Type: ONCHIP, EXT8BIT, EXT16BIT, ... */
    uint32_t         deviceStartAddress;	/**< Default Device Start Address. */
    uint32_t         deviceSize;			/**< Total Size of Device. */
    uint32_t         pageSize;				/**< Programming Page Size. */
//  unsigned char  	 EraseValue;            /**< Content of Erased Memory. */
    uint32_t         sectorsTypeNbr;        /**< Type number. */
    deviceSector*	 sectors;               /**< Device sectors. */
}externalLoader;
/**
 * \struct  externalStorageInfo
 * \brief   Get external storage informations useful for external Loader.
 */
typedef struct externalStorageInfo
{
    unsigned int externalLoaderNbr;
    externalLoader* externalLoader;
}externalStorageInfo;
/**
 * \brief This routine allows to run the application.
 * \param address : The address to start executing from.
 * In most cases, the program will run from the Flash memory starting from 0x08000000.
 * \return 0 if the execution correctly started, otherwise an error occurred.
 */
int execute(unsigned int address);
/**
 * \brief This routine allows to verfiy if the indicated file data is identical to Flash memory content.
 * \param fileData : Input file name.
 * \param address  : The address to start verifying from, it's considered only if the file has .bin or .binary as extension.
 * \return 0 if the file data matching Flash memory content, otherwise an error occurred or the data is mismatched.
 */
int verify(fileData_C* fileData, unsigned int address);
/**
 * \brief This routine allows to enter and make an automatic process for memory management through JTAG/SWD, UART, DFU, SPI, CAN and I²C interfaces.
 * \param filePath      : Indicates the full file path.
 * \param address       : The address to start downloading from.
 * \param skipErase     : If we have a blank device, we can skip erasing memory before programming [skipErase=0].
 * \param verify        : Add verification step after downloading.
 * \param isMassErase   : Erase the whole Flash memory.
 * \param obCommand     : Indicates the option bytes commands to be loaded "-ob [optionbyte=value] [optionbyte=value]..."
 * \param run           : Start the application.
 * \warning Connection to target must be established before performing automatic mode.
 */
void automaticMode(const wchar_t* filePath, unsigned int address, unsigned int skipErase, unsigned int verify, int isMassErase, char* obCommand, int run);
/**
 * \brief This routine allows to get Flash storage information.
 * \param deviceStorageStruct   : The data strcurure to load memory sectors information.
 * \return 0 if the operation was acheived successfully, otherwise an error occurred.
 */
int getStorageStructure(storageStructure** deviceStorageStruct);
/*! @} */


/* -------------------------------------------------------------------------------------------- */
/*                                  Option Bytes functions                                      */
/* -------------------------------------------------------------------------------------------- */

/*! \addtogroup OB
 * OB module groups option bytes functions used by any interface.
 *  @{
 */


/**
 * \brief This routine allows program the given Option Byte.
 * The option bytes are configured by the end user depending on the application requirements.
 * \param command : Indicates the command to execute.
 * \return 0 if the programming Option Byte correctly executed, otherwise an error occurred.
 * \note The command must written as: -ob [optionbyte=value] [optionbyte=value] ...
 * \code
 * int ob = sendOptionBytesCmd("–ob rdp=0x0 BOR_LEV=0");
 * \endcode
 */
int sendOptionBytesCmd(char* command);
/**
 * \brief This routine allows to get option bytes values of the connected target.
 * \return Structure #Peripheral_C in which the option bytes descriptions are stored.
 */
peripheral_C* initOptionBytesInterface();
 /*! @} */


/* -------------------------------------------------------------------------------------------- */
/*                                  Loaders functions                                           */
/* -------------------------------------------------------------------------------------------- */


/*! \addtogroup Loaders
 * Loaders module groups loaders functions.
 *  @{
 */


/**
 * \brief This routine allows to specify the location of Flash Loader.
 * \param path : Indicates the full path of the considered folder.
 */
void setLoadersPath(const char* path);
/**
 * \brief This routine allows to specify the path of the external Loaders to be loaded.
 * \param path : Indicates the full path of the folder containing external Loaders.
 * \param externalLoaderInfo : Structure in which the external Loaders informations are stored.
 */
void setExternalLoaderPath(const char* path, externalLoader** externalLoaderInfo);
/**
 * \brief This routine allows to get available external Loaders in th mentioned path.
 * \param path : Indicates the full path of the external Loader file ready for loading.
 * \param externalStorageNfo : Structure in which we get storage information.
 * \return 1 if the External loaders cannot be loaded from the path, otherwise 0.
 * \warning All external Loader files should have the extension "stldr".
 */
int  getExternalLoaders(const char* path, externalStorageInfo** externalStorageNfo);
/**
 * \brief This routine allows to unload an external Loaders.
 * \param path : Indicates the full path of the external Loader file ready for unloading.
 */
void removeExternalLoader(const char* path);
/**
 * \brief This routine allows to delete all target Flash Loaders.
 */
void deleteLoaders();
 /*! @} */

/* -------------------------------------------------------------------------------------------- */
/*                             STM32WB specific functions                                       */
/* -------------------------------------------------------------------------------------------- */

/*! \addtogroup STM32WB
 * Specific APIs used exclusively for STM32WB series to manage BLE Stack and they are available only through USB DFU and UART bootloader interfaces,
 * except for the “firmwareDelete" and the “firmwareUpgrade", available through USB DFU, UART and SWD interfaces.
 * Connection under Reset is mandatory.
 *  @{
 */

/**
 * \brief This routine allows to read the device unique identifier.
 * \param data : Pointer to the data buffer.
 */
int getUID64(unsigned char** data);
/**
 * \brief This routine allows to erase the BLE stack firmware.
 * \return 0 if the operation was acheived successfully, otherwise an error occurred.
 */
int firmwareDelete();
/**
 * \brief This routine allows to make upgrade of BLE stack firmware or FUS firmware.
 * \param filePath : Indicates the full path of the firmware to be programmed.
 * \param address : Start address of download.
 * \param firstInstall : 1 if it is the first installation, otherwise 0, to ignore the firmware delete operation.
 * \param startStack : Starts the stack after programming.
 * \param verify : Verify if the download operation is achieved successfully before starting the upgrade.
 * \return 0 if the operation was acheived successfully, otherwise an error occurred.
 */
int firmwareUpgrade(const wchar_t* filePath, unsigned int address, unsigned int firstInstall, unsigned int startStack, unsigned int verify);
/**
 * \brief This routine allows to start the programmed Stack.
 * \return 0 if the Stack was started successfully, otherwise an error occurred.
 */
int startWirelessStack();
/**
 * \brief This routine allows to start the programmed Stack.
 * \param filePath : Indicates the full path of the key file.
 * \note This is the public key generated by STM32TrustedPackageCreator when signing the firmware using -sign command.
 * \return 0 if the update was performed successfully, otherwise an error occurred.
 */
int updateAuthKey(const wchar_t* filePath);
/**
 * \brief This routine allows to lock the authentication key and once locked, it is no longer possible to change it.
 * \return 0 if the lock step was performed successfully, otherwise an error occurred.
 */
int authKeyLock();
/**
 * \brief This routine allows to write a customized user key.
 * \param filePath : Indicates the full path of the key file.
 * \param keyType  : String indicating the key type to be used "Simple", "Master", "Encrypted".
 * \return 0 if the write was performed successfully, otherwise an error occurred.
 */
int writeUserKey(const wchar_t* filePath, unsigned char keyType);
/**
 * \brief This routine allows to activate the AntiRollBack.
 * \return 0 if the activation was done successfully, otherwise an error occurred.
 */
int antiRollBack();
/**
 * \brief This routine allows to start and establish a communication with the FUS operator.
 * \return 0 if the FUS operator was started successfully, otherwise an error occurred.
 * \note Availbale only for ST-LINK interfaces.
 */
int StartFus();