caller/src/bindings.rs

extern "C" {
    #[doc = " \\brief This routine allows to enter and make an automatic process for memory management through JTAG/SWD, UART, DFU, SPI, CAN and I²C interfaces."]
    #[doc = " \\param filePath      : Indicates the full file path."]
    #[doc = " \\param address       : The address to start downloading from."]
    #[doc = " \\param skipErase     : If we have a blank device, we can skip erasing memory before programming [skipErase=0]."]
    #[doc = " \\param verify        : Add verification step after downloading."]
    #[doc = " \\param isMassErase   : Erase the whole Flash memory."]
    #[doc = " \\param obCommand     : Indicates the option bytes commands to be loaded \"-ob [optionbyte=value] [optionbyte=value]...\""]
    #[doc = " \\param run           : Start the application."]
    #[doc = " \\warning Connection to target must be established before performing automatic mode."]
    pub fn automaticMode(
        filePath: *const wchar_t,
        address: ::std::os::raw::c_uint,
        skipErase: ::std::os::raw::c_uint,
        verify: ::std::os::raw::c_uint,
        isMassErase: ::std::os::raw::c_int,
        obCommand: *mut ::std::os::raw::c_char,
        run: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[doc = " \\brief This routine allows to get Flash storage information."]
    #[doc = " \\param deviceStorageStruct   : The data strcurure to load memory sectors information."]
    #[doc = " \\return 0 if the operation was acheived successfully, otherwise an error occurred."]
    pub fn getStorageStructure(
        deviceStorageStruct: *mut *mut storageStructure,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows program the given Option Byte."]
    #[doc = " The option bytes are configured by the end user depending on the application requirements."]
    #[doc = " \\param command : Indicates the command to execute."]
    #[doc = " \\return 0 if the programming Option Byte correctly executed, otherwise an error occurred."]
    #[doc = " \\note The command must written as: -ob [optionbyte=value] [optionbyte=value] ..."]
    #[doc = " \\code"]
    #[doc = " int ob = sendOptionBytesCmd(\"–ob rdp=0x0 BOR_LEV=0\");"]
    #[doc = " \\endcode"]
    pub fn sendOptionBytesCmd(command: *mut ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to get option bytes values of the connected target."]
    #[doc = " \\return Structure #Peripheral_C in which the option bytes descriptions are stored."]
    pub fn initOptionBytesInterface() -> *mut peripheral_C;
}
extern "C" {
    #[doc = " \\brief This routine allows to specify the location of Flash Loader."]
    #[doc = " \\param path : Indicates the full path of the considered folder."]
    pub fn setLoadersPath(path: *const ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " \\brief This routine allows to specify the path of the external Loaders to be loaded."]
    #[doc = " \\param path : Indicates the full path of the folder containing external Loaders."]
    #[doc = " \\param externalLoaderInfo : Structure in which the external Loaders informations are stored."]
    pub fn setExternalLoaderPath(
        path: *const ::std::os::raw::c_char,
        externalLoaderInfo: *mut *mut externalLoader,
    );
}
extern "C" {
    #[doc = " \\brief This routine allows to get available external Loaders in th mentioned path."]
    #[doc = " \\param path : Indicates the full path of the external Loader file ready for loading."]
    #[doc = " \\param externalStorageNfo : Structure in which we get storage information."]
    #[doc = " \\return 1 if the External loaders cannot be loaded from the path, otherwise 0."]
    #[doc = " \\warning All external Loader files should have the extension \"stldr\"."]
    pub fn getExternalLoaders(
        path: *const ::std::os::raw::c_char,
        externalStorageNfo: *mut *mut externalStorageInfo,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to unload an external Loaders."]
    #[doc = " \\param path : Indicates the full path of the external Loader file ready for unloading."]
    pub fn removeExternalLoader(path: *const ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " \\brief This routine allows to delete all target Flash Loaders."]
    pub fn deleteLoaders();
}
extern "C" {
    #[doc = " \\brief This routine allows to read the device unique identifier."]
    #[doc = " \\param data : Pointer to the data buffer."]
    pub fn getUID64(data: *mut *mut ::std::os::raw::c_uchar) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to erase the BLE stack firmware."]
    #[doc = " \\return 0 if the operation was acheived successfully, otherwise an error occurred."]
    pub fn firmwareDelete() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to make upgrade of BLE stack firmware or FUS firmware."]
    #[doc = " \\param filePath : Indicates the full path of the firmware to be programmed."]
    #[doc = " \\param address : Start address of download."]
    #[doc = " \\param firstInstall : 1 if it is the first installation, otherwise 0, to ignore the firmware delete operation."]
    #[doc = " \\param startStack : Starts the stack after programming."]
    #[doc = " \\param verify : Verify if the download operation is achieved successfully before starting the upgrade."]
    #[doc = " \\return 0 if the operation was acheived successfully, otherwise an error occurred."]
    pub fn firmwareUpgrade(
        filePath: *const wchar_t,
        address: ::std::os::raw::c_uint,
        firstInstall: ::std::os::raw::c_uint,
        startStack: ::std::os::raw::c_uint,
        verify: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to start the programmed Stack."]
    #[doc = " \\return 0 if the Stack was started successfully, otherwise an error occurred."]
    pub fn startWirelessStack() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to start the programmed Stack."]
    #[doc = " \\param filePath : Indicates the full path of the key file."]
    #[doc = " \\note This is the public key generated by STM32TrustedPackageCreator when signing the firmware using -sign command."]
    #[doc = " \\return 0 if the update was performed successfully, otherwise an error occurred."]
    pub fn updateAuthKey(filePath: *const wchar_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to lock the authentication key and once locked, it is no longer possible to change it."]
    #[doc = " \\return 0 if the lock step was performed successfully, otherwise an error occurred."]
    pub fn authKeyLock() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to write a customized user key."]
    #[doc = " \\param filePath : Indicates the full path of the key file."]
    #[doc = " \\param keyType  : String indicating the key type to be used \"Simple\", \"Master\", \"Encrypted\"."]
    #[doc = " \\return 0 if the write was performed successfully, otherwise an error occurred."]
    pub fn writeUserKey(
        filePath: *const wchar_t,
        keyType: ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to activate the AntiRollBack."]
    #[doc = " \\return 0 if the activation was done successfully, otherwise an error occurred."]
    pub fn antiRollBack() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to start and establish a communication with the FUS operator."]
    #[doc = " \\return 0 if the FUS operator was started successfully, otherwise an error occurred."]
    #[doc = " \\note Availbale only for ST-LINK interfaces."]
    pub fn StartFus() -> ::std::os::raw::c_int;
}
